--- a/css/main.css
+++ b/css/main.css
@@ -2246,7 +2246,7 @@ ol {
   position: relative;
 }
 
-#home .user-auth .input_wrap .fist-residentNum {
+#home .user-auth .input_wrap .before-residentNum {
   max-width: 263px;
 }
 
